--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,48 @@
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('../fonts/opensans-light-webfont.woff2') format('woff2'),
+    url('../fonts/opensans-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'open_sansregular';
+    src: url('../fonts/opensans-regular-webfont.woff2') format('woff2'),
+    url('../fonts/opensans-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'gilroyextrabold';
+    src: url('../fonts/gilroyextrabold-webfont.woff2') format('woff2'),
+    url('../fonts/gilroyextrabold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'gilroylight';
+    src: url('../fonts/gilroylight-webfont.woff2') format('woff2'),
+    url('../fonts/gilroylight-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html {
 	height: 100%;
 }
@@ -157,7 +202,7 @@ h6 {
 
 .site-navigation a:active,
 .user-navigation a:active {
-  color: rgba(0,0,0,.3);
+    color: rgba(0,0,0,.3);
 }
 
 .site-navigation .catalog-product {
@@ -353,6 +398,11 @@ h6 {
 	margin-top: 36px;
 }
 
+.device-category {
+    margin-bottom: 180px;
+    border-bottom: 1px solid transparent;
+}
+
 .services label:hover {
 	color: black;
 }
@@ -361,6 +411,12 @@ h6 {
 .services h2,
 .about h2 {
 	font-size: 47px;
+}
+
+.partners {
+    position: relative;
+    top: -6px;
+    left: -10px;
 }
 
 .partners ul {
@@ -600,6 +656,8 @@ h6 {
 
 .catalog-header .catalog-right-part ul {
     display: flex;
+    position: relative;
+    left: -35px;
 }
 
 .catalog-header .catalog-right-part li {
@@ -653,22 +711,27 @@ h6 {
 
 
 
-.product b {
+.products-list-description b {
 	font-family: gilroyextrabold, Arial, sans-serif;
 	font-size: 18px;
 	width: 260px;
-	line-height: 22px;
+	line-height: 20px;
 	padding: 0;
 	margin: 0;
+    display: inline-block;
 }
 
-.product p {
+.products-list-description p {
 	font-family: gilroylight, Arial, sans-serif;
 	font-size: 16px;
 	color: #464646;
 	line-height: 22px;
 	padding: 0;
 	margin: 0;
+}
+
+.products-list-description a {
+    display: flex;
 }
 
 .product {
@@ -693,7 +756,13 @@ h6 {
 	height: 70px;
 	justify-content: space-between;
 	align-items: center;
-	margin-top: -10px;
+	margin-top: -6px;
+
+}
+
+.list-pages {
+    position: relative;
+    left: -20px;
 }
 
 .list-pages ul {
@@ -727,7 +796,7 @@ h6 {
 	font-family: gilroyextrabold, Arial, sans-serif;
 	font-size: 16px;
 	color: rgba(0,0,0,.3);
-	margin: 10px 13px;
+	margin: 10px 15px;
 }
 
 .list-pages .active-a {
@@ -913,11 +982,6 @@ h6 {
 MAIN GRID 
 */
 
-.container {
-	/*border: 1px solid green;*/
-}
-
-
 .clearfix:after {
     content: "";
     display: table;
@@ -975,19 +1039,19 @@ MAIN GRID
 
 .top-products label {
 	position: absolute;
-	top: 308px;
+	top: 288px;
 }
 
 
 
 #radio1 + label {
-	left: 383px;
+	left: 397px;
 }
 #radio2 + label {
-	left: 416px;
+	left: 430px;
 }
 #radio3 + label {
-	left: 449px;
+	left: 463px;
 }
 
 
@@ -1002,7 +1066,7 @@ MAIN GRID
 
 .top-products .right-part .button-wrapper {
 	position: absolute;
-	top: 270px;
+	top: 250px;
 }
 
 #radio1:checked ~ .selfi-stick1 {display: block;}
@@ -1121,7 +1185,7 @@ MAIN GRID
 .services .description img {
 	position: absolute;
 	top: 45px;
-	left: 600px;
+	left: 560px;
 }
 
 .services .description p {
@@ -1162,6 +1226,7 @@ MAIN GRID
 	vertical-align: middle;
 	padding: 0;
 	margin: 0;
+    margin-top: -10px;
 }
 
 .about .container {
@@ -1172,7 +1237,7 @@ MAIN GRID
 .about .left-part {
 	display: block;
 	float: left;
-	width: 460px;
+	width: 475px;
 	min-height: 570px;
 	padding: 0;
 	margin: 0;	
@@ -1195,6 +1260,12 @@ MAIN GRID
 	padding: 0;
 	
 }
+
+.about .left-part > p,
+.about .right-part > p {
+    margin-bottom: 10px;
+}
+
 .about svg {
 	position: absolute;
 }
@@ -1218,15 +1289,15 @@ MAIN GRID
 }
 
 .about .courier-references li:before {
-  content: "";
-  position: absolute;
-  top: 15px;
-  left: 0;
-  display: block;
-  width: 8px;
-  height: 8px;
-  border: 2px solid #e5e5e5;
-  border-radius: 50%;
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 0;
+    display: block;
+    width: 8px;
+    height: 8px;
+    border: 2px solid #e5e5e5;
+    border-radius: 50%;
 }
 
 .about img {
@@ -1234,7 +1305,7 @@ MAIN GRID
 }
 
 .about .button-wrapper {
-	margin-top: 75px;
+	margin-top: 65px;
 }
 
 
@@ -1307,10 +1378,6 @@ MAIN GRID
     display:none;
 }
 
-
-.title-background-bottom {
-	
-}
 .catalog-filter input[type="checkbox"] + label span {
     display:inline-block;
     width: 30px;
@@ -1361,7 +1428,11 @@ MAIN GRID
 }
 
 .catalog-filter fieldset label {
-	margin-bottom: 10px;
+	margin-bottom: 8px;
+}
+
+.catalog-filter .bluetooth-filter {
+    margin-top: 35px;
 }
 
 .catalog-filter label:hover {
@@ -1381,8 +1452,9 @@ MAIN GRID
 	width: 196px;
 	height: 2px;
     outline-color: rgba(0,0,0,.03);	
-	background: -webkit-linear-gradient(left, #91c92f 50%, #dbdbdb 50%)
-
+	background: -webkit-linear-gradient(left, #91c92f 50%, #dbdbdb 50%);
+    position: relative;
+    top: -10px;
 }
 
 #slider-cost::-webkit-slider-thumb {
@@ -1410,6 +1482,7 @@ MAIN GRID
 	opacity: 0.2;
 	position: relative;
 	left: 85px;
+    top: -10px;
 }
 
 .catalog-header {
@@ -1446,9 +1519,7 @@ MAIN GRID
 }
 
 .catalog-left-background {
-	float: left;
     width: 328px;
-    min-height: 1215px;
     background-color: #ebebeb;
     margin: 0;
     padding: 0;
@@ -1458,9 +1529,7 @@ MAIN GRID
 }
 
 .catalog-right-background {
-	float: right;
     width: 832px;
-    height: 1215px;
     background-color: white;
     padding: 0;
     margin: 0;
@@ -1524,13 +1593,36 @@ MAIN GRID
 	justify-content: space-between;
 }
 
+.catalog-left-background .button-wrapper button {
+    border: none;
+    background: transparent;
+    font-family: gilroyextrabold, Arial, sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    outline-color: rgba(0,0,0,.05);
+}
+
+.button-wrapper:active button {
+    color: rgba(0,0,0,.3);
+}
+
+.catalog-background .button-wrapper {
+    margin-bottom: 75px;
+}
+
+.catalog-background .container.clearfix {
+    display: flex;
+}
+
 .products-list .product {
 	margin-bottom: 37px;
 }
 
 .products-list-navigation {
 	margin-left: 73px;
-	background: #ebebeb;
+	margin-bottom: 75px;
+    background: #ebebeb;
 }
 
 .products-list-navigation button {
