--- a/css/style.css
+++ b/css/style.css
@@ -812,7 +812,7 @@ h6 {
 }
 
 
-.products-list-navigation button {
+.products-list-navigation a {
   	width: 125px;
   	font-family: gilroyextrabold, Arial, sans-serif;
   	font-size: 16px;
@@ -1141,7 +1141,7 @@ MAIN GRID
 	left: 300px;
 }
 
-.services label div {
+.services label span {
 	display: none;
 	position: absolute;
 	left: 160px;
@@ -1152,8 +1152,8 @@ MAIN GRID
 	background: black;
 } 
 
-.services label:nth-child(2) div {top: 65px;}
-.services label:nth-child(3) div {top: 130px;}
+.services label:nth-child(2) span {top: 65px;}
+.services label:nth-child(3) span {top: 130px;}
 
 .services label {
 	display: flex;
@@ -1211,13 +1211,13 @@ MAIN GRID
 .services #credit:checked ~ .credit-hidden {display: block;}
 
 .services #delivery:checked ~ .label-wrapper label:first-child {background: black; color: #f7e184;}
-.services #delivery:checked ~ .label-wrapper label:first-child div {display: block;}
+.services #delivery:checked ~ .label-wrapper label:first-child span {display: block;}
 
 .services #guarantee:checked ~ .label-wrapper label:nth-child(2) {background: black; color: #f7e184;}
-.services #guarantee:checked ~ .label-wrapper label:nth-child(2) div {display: block;}
+.services #guarantee:checked ~ .label-wrapper label:nth-child(2) span {display: block;}
 
 .services #credit:checked ~ .label-wrapper label:nth-child(3) {background: black; color: #f7e184;}
-.services #credit:checked ~ .label-wrapper label:nth-child(3) div {display: block;}
+.services #credit:checked ~ .label-wrapper label:nth-child(3) span {display: block;}
 
 .partners {
 	display: flex;
@@ -1625,9 +1625,8 @@ MAIN GRID
     background: #ebebeb;
 }
 
-.products-list-navigation button {
+.products-list-navigation a {
 	letter-spacing: 0.2em;
-	outline: none;
 	cursor: pointer;
 }
 
@@ -1645,8 +1644,8 @@ MAIN GRID
 	background: #d9d9d9;
 }
 
-.previous-button:active button,
-.next-button:active button {
+.previous-button:active,
+.next-button:active {
 	color: rgba(0,0,0,.3);
 }
 
